--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# OpenHyPE
-# R. Becker, 2023-02-06, V001
+# OpenHyPE Course Material
+# R. Becker, 2023-02-12, V001
 
 # Use .gitignore to not share all solutions at once.
 # By default ignore all directories containing solutions denoted by trailing pattern _soln
@@ -15,20 +15,9 @@ tmp/
 *.ipynb_checkpoints/
 *checkpoint.ipynb
 
-*/credentials.py
-
-data/OpenGeodata.NRW/OpenHygrisC/OpenHygrisC_gw-messstellen-messwerte_EPSG25832_CSV*
-
-data/original/NRW_DTM_Xanten_EPSG_4647_XYZ_old/dgm1_05170052_Xanten_EPSG4647_XYZ/dgm1*
-data/original/NRW_DTM_Xanten_EPSG_4647_XYZ_old/dgm1_05170052_Xanten_EPSG4647_XYZ.zip
-
-data/original/NRW_DTM_Hees_EPSG_25832_XYZ/*
-data/original/NRW_DTM_Xanten_EPSG_25832_XYZ/*
-
-data/original/OpenHygrisC_gw-messstellen-messwerte_EPSG25832_CSV/
+data/OpenGeodata.NRW/OpenHygrisC/OpenHygrisC_gw-messstellen-messwerte_EPSG25832_CSV/*
+data/OpenGeodata.NRW/OpenHygrisC/OpenHygrisC_gw-messstellen-messwerte_EPSG25832_CSV.zip
 
 
-data/derived/NRW_DTM_Hees_EPSG_25832_GeoTiff/*
-
-!data/derived/NRW_DTM_Hees_EPSG_25832_GeoTiff/*merged.tif
+#!gdms0100_DWD_NRW_soln
 
